test/static/bad/production_name_clashes.exp
File "production_name_clashes.mly", line 43, characters 2-5:
Error: This production has no @name attribute.
Error: the following production names are not unique:
  binary
  paren
  unary_neg
